@@ -44,17 +44,18 @@ title="GNOME 2.18" alt="GNOME 2.18, simply beautiful" /></a>
 Learn more about this release through the <a
 href="http://www.gnome.org/start/2.18/">GNOME 2.18 start page</a> and the
 detailed <a href="http://www.gnome.org/start/2.18/notes/C/">release notes</a>.</p>
+
+<h3><a href="http://www.gnome.org/projects/soc">Google Summer of Code 2007</a></h3>
+<p>GNOME is participating in Summer of Code 2007. If you are a student and you
+want to apply, you can <a
+href="http://code.google.com/soc/student_step1.html">submit</a> your project
+before March 24th. You can find some <a
+href="http://live.gnome.org/SummerOfCode2007/Ideas">ideas for projects</a> on
+our wiki.</p>
+
 <h3><a href="http://www.gnomejournal.org/">The GNOME Journal, March Edition</a></h3>
 <p>The latest issue of the GNOME Journal has just been published. GNOME Journal
 is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
-
-<h3><a href="http://www.gnome.org/projects/wsop/">Women's Summer Outreach Program 2006</a></h3>
-<p>Following on from GNOME's participation in Google's
-Summer of Code, we've decided to sponsor three projects in a similar fashion to
-the Summer of Code, but for women only. GNOME had no Summer of Code applications
-from women, and we think it's time to do something to encourage more women to
-join our development community. <a
-href="http://www.gnome.org/projects/wsop/">Check it out!</a></p>
 
 </div>
 
