@@ -1,3 +1,8 @@
+2007-03-14  Lucas Rocha  <lucasr@gnome.org>
+
+	* www.gnome.org/index.html: mention SoC 2007 just after the GNOME 2.18
+	entry.
+
 2007-03-14  Elijah Newren  <newren gmail com>
 
 	* www.gnome.org/index.html:
